--- a/main.css
+++ b/main.css
@@ -1,3 +1,29 @@
-body {
-  background-color: goldenrod;
+
+
+.jumbotron {
+  background-color: rgb(162, 168, 173);
+  display:block
+  justify-content center;
+  text-align: justify;
+  padding: 10px;
+  margin: 10px;
+  outline-style: auto;
+}
+
+.student-form {
+  display: block;
+  padding: 10px;
+  margin: 10px;
+  outline-style: auto;
+  justify-self:stretch
+}
+
+.card-body {
+  display: block;
+  background-color:palegoldenrod;
+  margin: 10px;
+  outline-style: auto;
+  justify-content:left;
+
+  
 }
