added some CSS styling to the page

--- a/main.css
+++ b/main.css
@@ -1,18 +1,43 @@
 body {
-  background-color: rgb(142, 185, 233);
-}
+    background-image: url("https://31.media.tumblr.com/adf5f9342b3070574db479460068938a/tumblr_n5hh5fJjIe1tp2oimo1_1280.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+        
+  }
 
 .jumbotron {
-  background-color: rgb(240, 223, 154);
+  background-color: rgba(39, 33, 6, 0.542);
   padding-bottom: 5px;
+  font-family: 'Harry Potter', arial; 
+  font-size: 20pt;
+  padding-top: 20px;
+  text-shadow: 2px 2px black;
+ }
+
+
+
+.h4 {
+  color: antiquewhite;
+  font-family: 'Harry Potter', arial;
+  text-shadow: 2px 2px black;
 }
 
 .h3 {
   justify-content: center;
+  font-family: 'Lumos', arial;
+  text-shadow: 2px 2px black;
 }
 
 .new-student-cards {
   min-height: 300px;;
+  font-family: 'Harry Potter', arial;
+  text-shadow: 2px 2px black;
+}
+.form-body {
+  padding-top: 15px;
+  font-family: 'Harry Potter', arial;
+  text-shadow: 2px 2px black;
 }
 
 .card-img-top {
@@ -23,9 +48,16 @@ body {
 .new-student-cards,
 .voldermort-cards {
     width: 50%;
-    border: 4px solid rgba(0, 0, 0, 0.426);
+    border: 4px solid rgb(240, 223, 154);
     border-radius: .25rem;
     margin: 10px;
     padding-top: 10px;
     text-align: center;
+    font-family: 'Harry Potter', arial;
+    text-shadow: 2px 2px black;
+}
+
+.card-img-top {
+  size: cover;
+  width: 100%;
 }
