--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ body {
 .voldermort-cards {
     width: 50%;
     border: 4px solid rgb(240, 223, 154);
+    border-style: groove;
     border-radius: .25rem;
     margin: 10px;
     padding-top: 10px;
