--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/* For desktop: */
+/* For desktop:
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
@@ -13,11 +13,11 @@
 .col-12 {width: 100%;}
 
 @media only screen and (max-width: 768px) {
-  /* For mobile phones: */
+  /* For mobile phones: 
   [class*="col-"] {
     width: 100%;
   }
-}
+} */
 
 
 body {
