created some layout for moving to voldemorts army, but now jumbotron button is broken

--- a/main.css
+++ b/main.css
@@ -22,8 +22,13 @@
 
 body {
   background-color: antiquewhite;
-}
+};
 
 #sortingDiv {
   display: none;
-}
+};
+
+.card-sets{
+  display: flex;
+  justify-content: center;
+};
