--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,13 @@
 body {
   background-color: rgb(179, 179, 135);
 }
+
+header {
+  font-size: 50px;
+  text-align: center;
+  font-style: bolder;
+}
+
+.jumbotron {
+  text-align: center;
+}
