added voldemort function display for a Hogwarts message.

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,3 +26,8 @@ header {
 .card-body {
   background-color: rgb(128, 125, 125);
 }
+
+#voldemort-army {
+  font-weight: 700;
+  font-size: 20px;
+}
